--- a/1/solution.tex
+++ b/1/solution.tex
@@ -45,6 +45,7 @@
 \begin{enumerate}
 \item 
     %%% 1 a) 
+    \begin{proof}
     Nech $L_1, L_2 \in \mathcal{L}_3$. 
     Pomocou axiomu doplnku z teórie množín je možné previesť nasledujúcu úpravu:
         \begin{align*}
@@ -55,39 +56,47 @@
             Nakoľko doplnok aj prienik sú uzavreté operácie v $\mathcal{L}_3$, potom $L_1 \cap
     \overline{L_2} \in \mathcal{L}_3$,a vzhľadom na ekvivalenciu potom aj $L_1 \setminus L_2 \in
     \mathcal{L}_3$. 
+    \end{proof}
 \item 
     %%% 1 b)    
+    \begin{proof}
     Nech $L_1 \in \mathcal{L}_3, L_2 \in \mathcal{L}_2^D$. Z vety 4.27 vieme, že trieda
         $\mathcal{L}_2^D$ je uzavretá voči prieniku s jazykom triedy $\mathcal{L}_3^D$ a voči
         doplnku. 
         Preto $\overline{L_2} \in \mathcal{L}_2^D$ a zrejme $L_1 \cap \overline{L_2} \in
         \mathcal{L}_2^D$. Zároveň vieme, že $L_1$ aj $L_2$ sú množiny a platí pre ne vzťah $L_1
         \setminus L_2 = L_1\cap \overline{L_2}$. Preto nutne $L_1\setminus L_2 \in L_2^D$.
+    \end{proof}
 
 \item 
     %%% 1 c)    
-    Z vety 4.24 plynie, že trieda jazykov $L_2$ nie je uzavretá voči prieniku, ani doplnku. Preto
-        $L_1 \cap \overline{L_2} \notin \mathcal{L}_2$, zároveň platí $L_1
-        \setminus L_2 = L_1\cap \overline{L_2}$ a preto $L_1 \setminus L_2 \notin
+    \begin{proof}
+    Nech $L_1 = \Sigma^*$. Zjavne $L_1 \in \mathcal{L}_3$, kedže preň existuje deterministický konečný automat $M =
+        (\{q_0\},\Sigma, \delta, q_0, \{q_0\})$, kde $\forall a \in \Sigma : \delta(q_0, a) = q_0$.
+    Zároveň nech $L_2 \in \mathcal{L}_2$.
+
+        Predpokladajme, že $\Sigma* \setminus L_2 \in \mathcal{L}_2$. Potom nasledujúcou úpravou
+        dostávame:
+        \begin{align*}
+            \Sigma^* \setminus L_2 = \{w | w \in \Sigma^* \land w \notin L_2 \} = \overline{L_2} 
+        \end{align*}
+        Z predpokladu $ \Sigma^* \setminus L_2 \in \mathcal{L}_2$ dostávame $\overline{L_2} \in
+        \mathcal{L}_2$, čo je spor, pretože z uzáverových vlastností bezkontextových jazykov vieme,
+        že $\overline{L_2} \notin \mathcal{L}_2$. Preto neplatí predpoklad a platí $L_1 \setminus L_2 \notin
         \mathcal{L}_2$.
+    \end{proof}
 \end{enumerate}
 \section*{Úloha č.2}
     Nech $P = (\{q_0, q_1, q_2, q_3\}, \{0,1,2\}, \{a,Z\}, \delta, q_0, Z, \{q_3\})$ je deterministický zásobníkový automat, kde
     $\delta$ je definované nasledovne:
     \begin{align*}
-        \delta (q_0, 1, Z) &= (q_0, aZ)\\
-        \delta (q_0, 1, a) &= (q_0, aa)\\
-        \delta (q_0, 2, Z) &= (q_0, aaZ)\\
-        \delta (q_0, 2, a) &= (q_0, aaa)\\
-        \delta (q_0, 0, Z) &= (q_0, Z)\\
-        \delta (q_0, 0, a) &= (q_0, a)\\
-        \delta (q_0, c, a) &= (q1, a)\\
-        \delta (q_0, c, Z) &= (q1, Z)\\
-        \delta (q1, a, a) &= (q1, \epsilon)\\
-        \delta (q1, b, a) &= (q2, \epsilon)\\
-        \delta (q1, 0, a) &= (q1, a)\\
-        \delta (q2, \epsilon, a) &= (q1, \epsilon)\\
-        \delta (q1, \epsilon, Z) &= (q3, \epsilon)\\
+        \delta (q_0, 1, Z) &= (q_0, aZ)  & \delta (q_0, 1, a) &= (q_0, aa)\\
+        \delta (q_0, 2, Z) &= (q_0, aaZ) & \delta (q_0, 2, a) &= (q_0, aaa)\\
+        \delta (q_0, 0, Z) &= (q_0, Z)   & \delta (q_0, 0, a) &= (q_0, a)\\
+        \delta (q_0, c, a) &= (q_1, a)   & \delta (q_0, c, Z) &= (q_1, Z)\\
+        \delta (q_1, a, a) &= (q_1, \epsilon) & \delta (q_1, b, a) &= (q_2, \epsilon)\\
+        \delta (q_1, 0, a) &= (q_1, a)   & \delta (q_2, \epsilon, a) &= (q1, \epsilon)\\
+        \delta (q_1, \epsilon, Z) &= (q3, \epsilon)\\
     \end{align*}
 
 
