--- a/2/solution.tex
+++ b/2/solution.tex
@@ -89,4 +89,14 @@ Ukázali sme teda, že každý neprázdny reťazec $w \in L$ je možné rozloži
     Tvrdenie teda platí pre $i = j + 1$, kde pre $j$ je dokázané, teda platí pre $\forall i \in N$. 
 \end{proof}
 
+
+\section*{Úloha č.3}
+Idea sigmy
+\begin{enumerate}
+    \item použijeme UTS na simulaciu <M> na <w>. Ak UTS cyklí, potom jazyk Affine je prázdny (a
+        <M>#<w> nepatrí do MP. Ak
+        zastaví, tak prijimeme ak reťazec <y> patrí do Affine. POZOR: Affine musi nutne vzdy
+        obsahovat aspon jeden retazec.
+\end{enumerate}
+
 \end{document}
